# rules_rust

./: WORKSPACE  WORKSPACE.bazel
.bazelci/: presubmit.yml
cargo/: cargo_manifest.bzl
cbindgen/: BUILD.bazel  cbindgen.bzl  repositories.bzl  toolchain.bzl
cbindgen/private/: cbindgen.toml.template
cbindgen/raze/: BUILD.bazel  Cargo.toml  crates.bzl
cbindgen/raze/remote/: BUILD.ansi_term-0.11.0.bazel  BUILD.atty-0.2.14.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.cbindgen-0.15.0.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.clap-2.33.3.bazel  BUILD.getrandom-0.1.15.bazel  BUILD.hashbrown-0.9.1.bazel  BUILD.heck-0.3.1.bazel  BUILD.hermit-abi-0.1.17.bazel  BUILD.indexmap-1.6.0.bazel  BUILD.itoa-0.4.6.bazel  BUILD.libc-0.2.80.bazel  BUILD.log-0.4.11.bazel  BUILD.ppv-lite86-0.2.10.bazel  BUILD.proc-macro2-1.0.24.bazel  BUILD.quote-1.0.7.bazel  BUILD.rand-0.7.3.bazel  BUILD.rand_chacha-0.2.2.bazel  BUILD.rand_core-0.5.1.bazel  BUILD.rand_hc-0.2.0.bazel  BUILD.redox_syscall-0.1.57.bazel  BUILD.remove_dir_all-0.5.3.bazel  BUILD.ryu-1.0.5.bazel  BUILD.serde-1.0.117.bazel  BUILD.serde_derive-1.0.117.bazel  BUILD.serde_json-1.0.60.bazel  BUILD.strsim-0.8.0.bazel  BUILD.syn-1.0.53.bazel  BUILD.tempfile-3.1.0.bazel  BUILD.textwrap-0.11.0.bazel  BUILD.toml-0.5.7.bazel  BUILD.unicode-segmentation-1.7.1.bazel  BUILD.unicode-width-0.1.8.bazel  BUILD.unicode-xid-0.2.1.bazel  BUILD.vec_map-0.8.2.bazel  BUILD.wasi-0.9.0+wasi-snapshot-preview1.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel  (+1 more)
docs/: BUILD  all.bzl  cargo.md  flatten.md  rust_cbindgen.md
examples/: WORKSPACE.bazel  examples_deps.bzl  examples_transitive_deps.bzl
examples/cbindgen/: BUILD.bazel  cbindgen_example.rs  cbindgen_examples_deps.bzl  cbindgen_examples_transitive_deps.bzl
examples/cbindgen/examples_cc/: BUILD.bazel  cbindgen_cc_example.bzl  cbindgen_cc_example.template.c  cbindgen_cc_example.template.cc  cbindgen_example_config.toml  transitive_repr_c.config.toml  transitive_repr_c.rs
examples/cbindgen/examples_cc/raze/: BUILD.bazel  Cargo.toml  crates.bzl
examples/cbindgen/examples_cc/raze/remote/: BUILD.ansi_term-0.11.0.bazel  BUILD.ansi_term-0.12.1.bazel  BUILD.atty-0.2.14.bazel  BUILD.autocfg-1.1.0.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.cbindgen-0.13.2.bazel  BUILD.cbindgen-0.15.0.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.clap-2.33.3.bazel  BUILD.clap-2.34.0.bazel  BUILD.fastrand-1.7.0.bazel  BUILD.getrandom-0.1.15.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.heck-0.3.3.bazel  BUILD.hermit-abi-0.1.17.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.indexmap-1.8.1.bazel  BUILD.instant-0.1.12.bazel  BUILD.itoa-0.4.6.bazel  BUILD.itoa-1.0.1.bazel  BUILD.libc-0.2.123.bazel  BUILD.libc-0.2.80.bazel  BUILD.log-0.4.11.bazel  BUILD.log-0.4.16.bazel  BUILD.ppv-lite86-0.2.10.bazel  BUILD.proc-macro2-1.0.24.bazel  BUILD.proc-macro2-1.0.37.bazel  BUILD.quote-1.0.18.bazel  BUILD.quote-1.0.7.bazel  BUILD.rand-0.7.3.bazel  BUILD.rand_chacha-0.2.2.bazel  BUILD.rand_core-0.5.1.bazel  BUILD.rand_hc-0.2.0.bazel  BUILD.redox_syscall-0.1.57.bazel  BUILD.redox_syscall-0.2.13.bazel  BUILD.remove_dir_all-0.5.3.bazel  BUILD.ryu-1.0.5.bazel  BUILD.ryu-1.0.9.bazel  (+24 more)
examples/cbindgen/examples_py/: BUILD.bazel  cbindgen_example.py
rust/: repositories.bzl
test/: deps.bzl  repositories.bzl
test/cargo_manifest/: BUILD.bazel  cargo_manifest_test.bzl  lib.rs  main.rs  runner.rs
test/cargo_manifest/raze/: BUILD.bazel  Cargo.toml  crates.bzl
test/cargo_manifest/raze/remote/: BUILD.cargo_toml-0.8.1.bazel  BUILD.proc-macro2-1.0.24.bazel  BUILD.quote-1.0.7.bazel  BUILD.serde-1.0.117.bazel  BUILD.serde_derive-1.0.117.bazel  BUILD.syn-1.0.53.bazel  BUILD.toml-0.5.7.bazel  BUILD.unicode-xid-0.2.1.bazel
