[package]
name = "fake_rules_rust_cargo_manifest_test"
version = "0.0.1"

[lib]
path = "fake_rules_rust_cargo_manifest_test.rs"

[dependencies]
cargo_toml = "0.8.1"

[package.metadata.raze]
genmode = "Remote"
workspace_path = "//test/cargo_manifest/raze"
gen_workspace_prefix = "rules_rust_test_cargo_manifest"
default_gen_buildrs = true
