# Copyright 2015 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rules_rust_cbindgen_cc_examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.79"
cbindgen = "=0.15.0"

[lib]
name = "fake"
path = "fake.rs"

[package.metadata.raze]
workspace_path = "//cbindgen/examples_cc/raze"
genmode = "Remote"
gen_workspace_prefix = "cbindgen_cc_examples"
package_aliases_dir = "."

[package.metadata.raze.crates.cbindgen.'0.15.0']
gen_buildrs = true
extra_aliased_targets = ["cargo_bin_cbindgen"]

[package.metadata.raze.crates.proc-macro2.'<2']
additional_flags = [
    "--cfg=use_proc_macro",
]

[package.metadata.raze.crates.log.'<0.5']
additional_flags = [
    "--cfg=atomic_cas",
]

[package.metadata.raze.crates.winapi.'<0.4']
additional_flags = [
    "--cfg=feature=\\\"basetsd\\\"",
    "--cfg=feature=\\\"cfg\\\"",
    "--cfg=feature=\\\"cfgmgr32\\\"",
    "--cfg=feature=\\\"devpropdef\\\"",
    "--cfg=feature=\\\"excpt\\\"",
    "--cfg=feature=\\\"ktmtypes\\\"",
    "--cfg=feature=\\\"libloaderapi\\\"",
    "--cfg=feature=\\\"ntdef\\\"",
    "--cfg=feature=\\\"ntstatus\\\"",
    "--cfg=feature=\\\"processthreadsapi\\\"",
    "--cfg=feature=\\\"reason\\\"",
    "--cfg=feature=\\\"rpcndr\\\"",
    "--cfg=feature=\\\"vadefs\\\"",
    "--cfg=feature=\\\"vcruntime\\\"",
    "--cfg=feature=\\\"wincon\\\"",
    "--cfg=feature=\\\"wincontypes\\\"",
    "--cfg=feature=\\\"windef\\\"",
    "--cfg=feature=\\\"wingdi\\\"",
    "--cfg=feature=\\\"winnt\\\"",
    "--cfg=feature=\\\"winreg\\\"",
    "--cfg=feature=\\\"wtypesbase\\\"",
]
